# ufc_scraper

./: .gitignore  README.md  pyproject.toml
analysis/: UFC Neo4j Fights Graph.ipynb  networkx_pagerank.ipynb
data/: fight_hist.csv  fighter_stats.csv
scripts/: scrape_fights.ipynb  ufc_scraper.py
