[tool.poetry]
name = "ufc-scraper"
version = "0.1.0"
description = ""
authors = ["Steven Wang"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.31.0"
pandas = "^2.2.2"
urllib3 = "^2.2.1"
bs4 = "^0.0.2"
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
networkx = "^3.3"
scipy = "^1.13.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
